# test

./: .env  =1.10,  Dockerfile  docker-compose.yml  inventory.py  main.py  models.py  names.py  pyproject.toml  requirements.txt
app/Frontend/DatabaseGUI/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
app/Frontend/DatabaseGUI/src/: App.css  App.jsx  index.css  main.jsx
